--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -9,20 +9,20 @@
   right: 0
   top: 0
   z-index: 3
-  height: 500px
+  height: 491px
   background-color: #181f23
   background-image: url('../img/ocean.jpg')
   color: #fff
   text-align: center
+  @media (min-width:$screen-sm-min)
+    padding-top: 170px
+    padding-bottom: 170px
+    height: 531px
   &:before
     content: ""
     display: block
     background: rgba(#181f23, .85)
     +cover()
-  @media (min-width:$screen-sm-min)
-    padding-top: 170px
-    padding-bottom: 170px
-    height: 559px
   &.scroll-passed
     position: static
 
@@ -81,12 +81,12 @@
   position: relative
   z-index: 5
   background: #fff
-  margin-top: 500px
+  margin-top: 491px
   min-height: 500px
   @media (min-width:$screen-sm-min)
     padding-top: 100px
     padding-bottom: 100px
-    margin-top: 559px
+    margin-top: 531px
   @media (min-width:1300px)
     padding-top: 140px
     padding-bottom: 140px
@@ -124,7 +124,7 @@
   @media (min-width:$screen-sm-min)
     margin-bottom: 80px
     padding-bottom: 80px
-  @media (min-width:1300px)
+  @media (min-width:$screen-md-min)
     float: left
     width: 50%
     max-width: 50%
@@ -134,6 +134,13 @@
     margin-bottom: 40px
     &:nth-child(2n+1)
       clear: right
+    &:after
+      display: none!important
+  @media (min-width:1300px)
+    padding-left: 50px
+    padding-right: 50px
+    padding-bottom: 60px
+    margin-bottom: 60px
   &:after
     content: ""
     display: block
@@ -159,8 +166,8 @@
      border-radius: 6px
   h3
     font-size: 16px
-    color: $primary
-    margin-bottom: 30px
+    //color: $primary
+    margin-bottom: 25px
     text-align: center
     @media (min-width:$screen-sm-min)
       font-size: 18px
@@ -171,6 +178,8 @@
       font-size: 11px
       @media (min-width:$screen-sm-min)
         font-size: 12px
+      strong
+        color: $text-drk
       a
         color: $text
         &:hover,
