--- a/sass/modules/global.sass
+++ b/sass/modules/global.sass
@@ -1,19 +1,17 @@
 /* ////====== GLOBAL STYLES =====//// */
 
-html
-  background: #181f23
-
 body 
-  font-family: $maisonneue
+  font-family: $akkurat-mono
   color: $text
   font-size: $font-size
-  line-height: 1.8
+  line-height: 2
   font-weight: 300
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  font-size: 12px
 
 .container-fluid
-  max-width: 1400px
+  max-width: 1200px
 
 a 
   color: $link
@@ -47,6 +45,7 @@ h3,
 h4,
 h5,
 h6
+  font-family: $akkurat
   font-weight: bold
   margin-top: 0
   color: $text-drk
