--- a/sass/modules/variables.sass
+++ b/sass/modules/variables.sass
@@ -1,7 +1,14 @@
 //* ///========== VARIABLES ==========/// *//
 
+//Colors
+$orange:            #f96335
+$blue:              darken(#81daf3, 15%)
+$midnight:          #263238
+$midnight2:         #181f23
+
+
 //Bootstrap Variables
-$brand-primary:      darken(#81daf3, 15%) //temp
+$brand-primary:      $blue
 $brand-success:      #66bb6a //temp
 $brand-error:        #ffd54f //temp
 $brand-warning:      #ff8a80 //temp
@@ -14,16 +21,17 @@ $font-size:          $font-size-base
 
 $border-radius:      4px
 
-//Colors
+//
 $primary:            $brand-primary
 $secondary:          $brand-success
 $text:               $text-color
 $text-lt:            lighten($text, 20%)
-$text-drk:           #263238
+$text-drk:           $midnight
 $link:               $primary
 $border:             lighten($text, 40%)
 $form-border-wd:     1px
 
 // Web Fonts
 $maisonneue:  MaisonNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
-$bello: Bello, Bodoni, Garamond, serif
+$akkurat:  Akkurat, "Helvetica Neue", Helvetica, Arial, sans-serif
+$akkurat-mono:  AkkuratMono, Courier, sans-serif
