--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -23,8 +23,7 @@
 @import "modules/mixins"
 
 /* ////======= WEB FONTS =======//// */
-@import "fonts/maisonneue"
-@import "fonts/bello"
+@import "fonts/akkurat"
 
 //Modules
 @import "modules/global"
