--- a/sass/modules/footer.sass
+++ b/sass/modules/footer.sass
@@ -1,18 +1,18 @@
 /* ////====== FOOTER STYLES =====//// */
 
 .dg-footer
-  background-color: #181f23
-  background-image: url('../img/ocean.jpg')
+  background-color: darken($midnight, 5%) //#1e1e1e
+  //background-image: url('../img/ocean.jpg')
   color: #fff
   padding-top: 60px
   padding-bottom: 60px
   text-align: center
   position: relative
-  &:before
-    content: ""
-    display: block
-    background: rgba(#181f23, .85)
-    +cover()
+  // &:before
+  //   content: ""
+  //   display: block
+  //   background: rgba(#181f23, .85)
+  //   +cover()
 
   .dg-footer-text
     position: relative
@@ -35,7 +35,6 @@
     font-size: 26px
     color: #fff
     margin-bottom: 30px
-    font-family: $bello
     @media (min-width:$screen-sm-min)
       font-size: 30px
       margin-bottom: 40px
@@ -43,27 +42,27 @@
   .dg-social
     li
       a
-        color: lighten($text, 40%)
+        color: #fff
         text-transform: uppercase
-        font-size: 10px
-        margin-left: 2px
-        margin-right: 2px
+        font-size: 9px
+        margin-left: 0px
+        margin-right: 0px
         font-weight: bold
         @media (min-width:$screen-sm-min)
-          font-size: 12px
+          font-size: 11px
           margin-left: 15px
           margin-right: 15px
         &:hover,
         &:focus,
         &:active
-          color: $link
+          color: $primary
 
   .dg-copyright
-    color: #999
-    font-size: 10px
+    color: #fff
+    font-size: 8px
     text-transform: uppercase
     margin-top: 30px
     font-weight: normal
     @media (min-width:$screen-sm-min)
-      font-size: 11px
+      font-size: 10px
       margin-top: 40px
