--- a/sass/modules/nav.sass
+++ b/sass/modules/nav.sass
@@ -41,7 +41,7 @@
     color: #fff
     font-weight: bold
     font-size: 12px
-    line-height: 40px
+    line-height: 30px
     float: right
     transition: all .2s ease-in-out
     &:hover,
@@ -50,16 +50,16 @@
       color: $link
     @media (min-width: 1001px)
       font-size: 14px
-      line-height: 45px
+      line-height: 35px
 
   &.scroll-passed
     .dg-logo
       svg
         .path1,
         .path2
-          fill: $text-drk
+          fill: $midnight
     .dg-contact
-      color: $text-drk
+      color: $midnight
       &:hover,
       &:focus,
       &:active
