--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -1,48 +1,54 @@
 /* ////====== HOME STYLES =====//// */
 
 .dg-hero
-  padding-top: 150px
-  padding-bottom: 150px
-  background: #f4f4f4
+  // padding-top: 150px
+  // padding-bottom: 150px
+  background: $midnight
   position: fixed
   left: 0
   right: 0
   top: 0
   z-index: 3
-  height: 491px
-  background-color: #181f23
-  background-image: url('../img/ocean.jpg')
-  color: #fff
-  text-align: center
+  height: 100vh
+  //height: 491px
+  //background-color: #181f23
+  //background-image: url('../img/ocean.jpg')
+  //text-align: center
   @media (min-width:$screen-sm-min)
-    padding-top: 170px
-    padding-bottom: 170px
-    height: 531px
-  &:before
-    content: ""
-    display: block
-    background: rgba(#181f23, .85)
-    +cover()
+    // padding-top: 170px
+    // padding-bottom: 170px
+    height: 100vh
+  // &:before
+  //   content: ""
+  //   display: block
+  //   background: #f4f4f4
+  //   +cover()
+
   &.scroll-passed
     position: static
+
+  .container-fluid
+    height: 100%
+    display: flex
+    flex-direction: column
+    justify-content: center
 
   .dg-hero-text
     max-width: 530px
     position: relative
     z-index: 2
-    +center-block()
-    text-align: center
+    //+center-block()
     @media (min-width:1000px)
       max-width: 650px
     h1
       color: #fff
-      font-family: $bello
-      font-size: 40px
+      font-size: 50px
+      line-height: 1
       @media (min-width:$screen-sm-min)
-        font-size: 60px
+        font-size: 70px
         margin-bottom: 25px
       @media (min-width:$screen-lg-min)
-        font-size: 70px
+        font-size: 90px
         margin-bottom: 30px
     p
       font-size: 16px
@@ -50,7 +56,7 @@
       font-weight: 300
       color: #999
       strong
-        color: #fff
+        color: #ddd
       span
         font-weight: normal
       @media (min-width:$screen-sm-min)
@@ -64,9 +70,9 @@
     a
       display: inline-block
       color: #999
-      font-style: italic
+      //font-style: italic
       border-bottom: 1px solid #999
-      line-height: 22px
+      line-height: 1
       &:hover,
       &:focus,
       &:active
@@ -81,17 +87,22 @@
   position: relative
   z-index: 5
   background: #fff
-  margin-top: 491px
+  margin-top: 100vh
+  //margin-top: 491px
   min-height: 500px
   @media (min-width:$screen-sm-min)
     padding-top: 100px
     padding-bottom: 100px
-    margin-top: 531px
-  @media (min-width:1300px)
-    padding-top: 140px
-    padding-bottom: 140px
+    margin-top: 100vh
+    // margin-top: 531px
+
   &.scroll-passed
     margin-top: 0
+
+  .row
+    margin-bottom: 60px
+    @media (min-width:$screen-sm-min)
+      margin-bottom: 100px
   
   .dg-works-heading
     margin-bottom: 100px
@@ -108,9 +119,10 @@
       @media (min-width:$screen-sm-min)
         font-size: 11px
     p
+      font-family: $akkurat
       font-size: 18px
       color: $text-drk
-      font-weight: normal
+      font-weight: 300
       line-height: 1.2
       @media (min-width:$screen-sm-min)
         font-size: 24px
@@ -119,12 +131,9 @@
   margin-bottom: 40px
   padding-bottom: 40px
   +center-block()
-  max-width: 800px
+  max-width: 500px
   position: relative
   @media (min-width:$screen-sm-min)
-    margin-bottom: 80px
-    padding-bottom: 80px
-  @media (min-width:$screen-md-min)
     float: left
     width: 50%
     max-width: 50%
@@ -137,10 +146,10 @@
     &:after
       display: none!important
   @media (min-width:1300px)
-    padding-left: 50px
-    padding-right: 50px
-    padding-bottom: 60px
-    margin-bottom: 60px
+    padding-left: 40px
+    padding-right: 40px
+    padding-bottom: 70px
+    margin-bottom: 70px
   &:after
     content: ""
     display: block
@@ -160,24 +169,27 @@
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.05)
     margin-bottom: 20px
     transition: all .2s ease-in-out
+    max-width: 600px
     &:hover
       box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.15)
     img
-     border-radius: 6px
+      border-radius: 6px
+
   h3
     font-size: 16px
-    //color: $primary
-    margin-bottom: 25px
-    text-align: center
-    @media (min-width:$screen-sm-min)
-      font-size: 18px
+    margin-bottom: 15px
+  
   .dg-work-text
     +clearfix()
-    
+    h3
+      font-size: 14px
+      margin-bottom: 10px
+    @media (min-width:$screen-sm-min)
+      font-size: 16px
     p
-      font-size: 11px
+      font-size: 9px
       @media (min-width:$screen-sm-min)
-        font-size: 12px
+        font-size: 11px
       strong
         color: $text-drk
       a
