--- a/sass/modules/global.sass
+++ b/sass/modules/global.sass
@@ -10,6 +10,12 @@ body
   -moz-osx-font-smoothing: grayscale
   font-size: 12px
 
+.preload *
+  -webkit-transition: none !important
+  -moz-transition: none !important
+  -ms-transition: none !important
+  -o-transition: none !important
+
 .container-fluid
   max-width: 1200px
 
