--- a/sass/modules/global.sass
+++ b/sass/modules/global.sass
@@ -15,6 +15,7 @@ body
   -moz-transition: none !important
   -ms-transition: none !important
   -o-transition: none !important
+  transition: none !important
 
 .container-fluid
   max-width: 1200px
@@ -58,6 +59,3 @@ h6
 
 hr
   border-top-color: $border
-
-.wow
-  visibility: hidden
