--- a/sass/modules/variables.sass
+++ b/sass/modules/variables.sass
@@ -6,30 +6,22 @@ $blue:              darken(#81daf3, 15%)
 $midnight:          #263238
 $midnight2:         #181f23
 
-
-//Bootstrap Variables
-$brand-primary:      $blue
 $brand-success:      #66bb6a //temp
-$brand-error:        #ffd54f //temp
-$brand-warning:      #ff8a80 //temp
+$brand-error:        #ff8a80 //temp
+$brand-warning:      #ffd54f //temp
 $brand-info:         #81daf3 //temp
-$text-color:         darken(#90a4ae, 30%) //temp
-$link-color:         $brand-success
-$link-hover-color:   darken($link-color, 10%)
-$font-size-base:     16px !default
-$font-size:          $font-size-base
 
-$border-radius:      4px
 
 //
-$primary:            $brand-primary
-$secondary:          $brand-success
-$text:               $text-color
+$primary:            $blue
+$text:               darken(#90a4ae, 30%) //temp
 $text-lt:            lighten($text, 20%)
 $text-drk:           $midnight
 $link:               $primary
-$border:             lighten($text, 40%)
-$form-border-wd:     1px
+
+$screen-sm-min:      767px
+$screen-sm-max:      991px
+$screen-lg-min:      1170px
 
 // Web Fonts
 $maisonneue:  MaisonNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
