--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -5,35 +5,10 @@
 //Variables
 @import "modules/variables"
 
-/*!
- * 
- * 
- * 
- */
-/* ////===== BOOTSTRAP v3.3.7 =====//// */
-@import "bootstrap"
-/* ////===== END of BOOTSTRAP =====//// */
-/*!
- * 
- * 
- * 
- */
-
-//Mixins
-@import "modules/mixins"
-
 /* ////======= WEB FONTS =======//// */
 @import "fonts/akkurat"
 
 //Modules
 @import "modules/global"
-@import "modules/forms"
-@import "modules/buttons"
-@import "modules/nav"
-@import "modules/footer"
-
-//Pages
-@import "pages/home"
-
-//Plugins
-@import "outdatedbrowser"
+@import "modules/dg"
+@import "modules/outdatedbrowser"
