--- a/sass/modules/dg.sass
+++ b/sass/modules/dg.sass
@@ -94,23 +94,19 @@
         font-size: 16px
         max-width: 500px
     .html
-
       color: darken($brand-error, 8%)
     .css
       color: darken($brand-info, 8%)
     .js
       color: darken($brand-warning, 8%)
-    a
+    .bb-link
       display: inline-block
-      color: #999
-      //font-style: italic
-      border-bottom: 1px solid #999
+      color: #3FD5AE
       line-height: 1
       &:hover,
       &:focus,
       &:active
-        color: #fff
-        border-bottom: 1px solid #fff
+        color: darken(#3FD5AE, 15%)
 
 
 /* Social */
