--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
   margin: 0; }
 
 body {
-  background: #222;
+  background: #111;
   font-family: AkkuratMono, Courier, sans-serif;
   color: #46575f;
   font-size: 16px;
@@ -194,7 +194,7 @@ h6 {
       font-size: 14px;
       line-height: 1.8;
       font-weight: 300;
-      color: #ccc; }
+      color: #999; }
       .dg-hero .dg-hero-text p strong {
         color: #ddd; }
       .dg-hero .dg-hero-text p span {
